--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 -----------------
-https://github.com/ardacarofficial/links-website is open source project.
+https://github.com/TuShArBhArDwA/LinkHub is open source project.
 -----------------
 -->
 
@@ -10,7 +10,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Description - Your Title</title>
+    <title>LinkHub</title>
     <meta name="description" content="Your Description">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400&amp;display=swap">
     <link rel="stylesheet" href="css/reset.css">
@@ -21,11 +21,11 @@ https://github.com/ardacarofficial/links-website is open source project.
     <header>
     <!-- Logo, Title and Description Codes Start -->
       <div class="header_img flex_column_center">
-        <img src="img/logo.png" alt="Logo" />
+        <img src="img/logo.jpg" alt="Logo" />
       </div>
       <div class="header_text flex_column_center">
-        <h1 class="header_h_item">Your Title</h1>
-        <h2 class="header_h_item">Your Description</h2>
+        <h1 class="header_h_item">Tushar Bhardwaj</h1>
+        <h2 class="header_h_item">Upcoming SWE Intern @Microsoft</h2>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
