--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@ https://github.com/TuShArBhArDwA/LinkHub is open source project.
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/wiki/Component-Settings" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="https://github.com/TuShArBhArDwA/LinkHub/Component-Settings" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Component Settings</button>
           </a>
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/wiki/Design-Settings" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="https://github.com/TuShArBhArDwA/LinkHub/wiki/Design-Settings" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Design Settings</button>
           </a>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/discussions" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="https://github.com/TuShArBhArDwA/LinkHub/discussions" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Report a Bug or Suggestion</button>
           </a>
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/pulls" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="https://github.com/TuShArBhArDwA/LinkHub/pulls" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Support the Project</button>
           </a>
         </div>
         <!-- Menu Item -->
-        <a class="main_a_item" href="https://github.com/ardacarofficial/links-website" target="_blank" rel="nofollow">
+        <a class="main_a_item" href="https://github.com/TuShArBhArDwA/LinkHub" target="_blank" rel="nofollow">
           <button class="main_button_item">Github Open Source Files</button>
         </a>
         <!-- Menu Item -->
-        <a class="main_a_item" href="https://github.com/ardacarofficial" target="_blank" rel="nofollow">
+        <a class="main_a_item" href="https://github.com/TuShArBhArDwA" target="_blank" rel="nofollow">
           <button class="main_button_item">Project Creator</button>
         </a>
       </section>
@@ -190,7 +190,7 @@ https://github.com/TuShArBhArDwA/LinkHub is open source project.
     <footer>
       <!-- Footer Codes Start -->
       <div class="footer_div_item flex_row_center">
-        <a class="footer_a_item" href="#link">Your Name</a>&nbsp;| Copyright Text
+        <a class="footer_a_item" href="https://tushar-bhardwaj.vercel.app/" target="_blank">Made with ❤️ by</a>&nbsp; Tushar Bhardwaj
       </div>
     </footer>
       <!-- Footer Codes End -->
