--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ https://github.com/TuShArBhArDwA/LinkHub is open source project.
     <footer>
       <!-- Footer Codes Start -->
       <div class="footer_div_item flex_row_center">
-        <a class="footer_a_item" href="https://tushar-bhardwaj.vercel.app/" target="_blank">Made with ❤️ by</a>&nbsp; Tushar Bhardwaj
+        Made with ❤️ by<a class="footer_a_item" href="https://tushar-bhardwaj.vercel.app/" target="_blank"> Tushar Bhardwaj</a>
       </div>
     </footer>
       <!-- Footer Codes End -->
