--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ https://github.com/TuShArBhArDwA/LinkHub is open source project.
     <title>LinkHub</title>
     <meta name="description" content="Your Description">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400&amp;display=swap">
-    <link rel="icon" type="image/jpg" href="logo.jpg">
+    <link rel="icon" type="image/jpeg" href="img/logo.jpg">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
